# job-match-service

./: .env.example  README.md  main.py  pyproject.toml  run_and_test.py  test_inputs.sh  test_manual.py
.github/ISSUE_TEMPLATE/: 1-feature-request.yml  2-bug-report.yml  3-task-request.yml  🚀-feature-request.md
src/: main.py
src/job_match_service/: __init__.py  api.py  config.py  embeddings.py  similarity.py
tests/: __init__.py  conftest.py  test_api.py
