[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-match-service"
version = "0.1.0"
description = "A microservice for text similarity comparison using AI embeddings"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "httpx>=0.26.0",  # Required for FastAPI TestClient
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/job_match_service --cov-report=term-missing" 